--- a/views/index.html
+++ b/views/index.html
@@ -101,7 +101,7 @@
             <script>
               $(document).ready(function(){
                 $("#gestureBTN").click(function(){
-                  sessionStorage.setItem('query', 'gestue');
+                  sessionStorage.setItem('query', 'gesture');
                 })
                 $("#portraitBTN").click(function(){
                   sessionStorage.setItem( 'query',"portrait");
