--- a/views/practice-nofiles.html
+++ b/views/practice-nofiles.html
@@ -1,129 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-    <!-- Style files -->
-    <link rel="stylesheet" href="modal.css" />
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto:wght@100&family=Ubuntu:wght@300&family=Work+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Style files -->
+  <link rel="stylesheet" href="modal.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="practice-page-styles.css">
+  <link rel="stylesheet" href="user-selections.css">
+  <link rel="stylesheet" href="common.css" >
 
-    <!-- Font awesome link -->
-    <script
-      src="https://kit.fontawesome.com/89202e165b.js"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto:wght@100&family=Ubuntu:wght@300&family=Work+Sans:wght@300&display=swap"
+    rel="stylesheet" />
 
-    <title>Gesture</title>
-  </head>
+  <!-- Font awesome link -->
+  <script src="https://kit.fontawesome.com/89202e165b.js" crossorigin="anonymous"></script>
 
-  <body>
-    <div class="container">
-      <div class="page-headers">
+  <title>Gesture</title>
+</head>
 
-        <h1>How does it work?</h1>
-        <div class="descriptions">
-          <p> Select how long each image will be displayed.</p>
+<body>
+  <div class="practice-header-wrapper">
+    <div class="page-header">
+
+      Your own set
+    </div>
+
+    <div class="page-links-wrapper">
+      <div class="sub-links">
+
+        <div class="home">
+          <a class="highlight" href="/">
+            <i class="fa-solid fa-house"></i>
+            Home
+          </a>
         </div>
 
-        <div>
-            <hr />
-          </div>
-    
-          <div class="card">
-            <div class="card-header">
-              <h5 class="mb-0 lead">
-                <i class="fa-solid fa-hourglass"></i>
-                Select a time
-              </h5>
-            </div>
-    
-            <div class="card-body">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="time"
-                  id="timer1"
-                  value="1"
-                />
-                1 min
-              </div>
-    
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="time"
-                  id="timer2"
-                  value="2"
-                />
-                2 min
-              </div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-header" id="headingOne">
-              <h5 class="mb-0">
-                  <p class="lead">
-                    <!--Personal Images-->
-                    <i class="fa-solid fa-upload"></i>
-                    Use your own images!
-                  </p>
-                </button>
-              </h5>
-            </div>
-  
-              <div class="card-body">
-                <div class="descriptions">
-                  <p>
-                    You can use your own set of images for this practice. Do not
-                    worry. We will not save your images unless you want us to. In
-                    case you want us to, they will remain private and for your use
-                    only.
-                  </p>
-                </div>
-                <div>
-                  <input type="file" id="image_input" webkitdirectory multiple />
-                </div>
-                <a
-                  class="btn btn-link time-select"
-                  onclick="activateModal()"
-                  role="button"
-                  >Start time</a
-                >
-              </div>
-            </div>
+        <div class="learn">
+          <a class="highlight" href="#">
+            <i class="fa-solid fa-chalkboard-user"></i>
+            Learn
+          </a>
+        </div>
 
       </div>
     </div>
 
-    <div id="myModal" class="modal">
-      <span id="closeBTN" class="close">&times;</span>
+  </div>
 
-      <div class="timer-banner" id="timer">
-        <div class="timer-banner-text" id="timer-caption"></div>
+  <div class="spacing"></div>
+  <div class="user-selections-wrapper">
+
+    <div class="user-time-selection">
+
+      <div class="card">
+        <div class="card-header">
+          <div class="selection-header">
+            <i class="fa-solid fa-hourglass"></i>
+            Select a time
+    
+          </div>
+    
+    
+        </div>
+    
+        <div class="card-body">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="time" id="timer1" value="1" />
+            1 min
+          </div>
+    
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="time" id="timer2" value="2" />
+            2 min
+          </div>
+        </div>
       </div>
+
+    </div>
+
+    <div class="spacing"></div>
+    <div class="user-image-selection">
+
+      <div class="card">
+        <div class="card-header">
+          <div class="selection-header">
+            <i class="fa-solid fa-upload"></i>
+            Use your own images!
+            </div>
+              <!--Personal Images-->
+             
+   
+        </div>
+    
+        <div class="card-body">
+          <div class="descriptions">
+            <p>
+              You can use your own set of images for this practice. Do not
+              worry, we will not save your images.
+            </p>
+          </div>
+          <div>
+            <input value="false" type="file" id="image_input" webkitdirectory multiple />
+          </div>
+          <a class="btn btn-link time-select" onclick="activateModal()" role="button">Start time</a>
+        </div>
+      </div>
+      
+    </div>
+
+   
+
+
+  </div>
+
+
+
+
+
+
+  <div id="myModal" class="modal">
+    <span id="closeBTN" class="close">&times;</span>
+
+    <div class="timer-banner" id="timer">
+      <div class="timer-banner-text" id="timer-caption"></div>
     </div>
   </div>
-    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="/timer.js"></script>
-  </body>
+  </div>
+  <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+  <script src="/timer.js"></script>
+</body>
+
 </html>
